# master-thesis-tool

ftranslation/Codigo/GridTest/: consolidate.py  consorts  consortsout  consortssinout  copy_directory_random.py  create_extra.sh  create_extra_spass_data.py  create_extra_spass_graphs.py  deployer.py  diff.gnuplot  directoryStructure.py  eprover.py  etest  flotter.gnuplot  fpoly  fpolyn  functionalTranslation.py  generateDirectoryLock.py  gnuplotPlots.py  htab.py  makeEnv.sh  miscFunctions.py  mtest  mtest2  nohup.out  optimizedFunctionalTranslation.py  ospass.py  otemplate.py  otest  out  oute  pcon  psin  randomHCNFTest.py  remoteTestRunner.py  removeAll.sh  removePickles.sh  removePycs.sh  removeScratches.sh  reports.py  (+14 more)
ftranslation/Codigo/GridTest/configurations/.svn/: all-wcprops  entries
ftranslation/Codigo/GridTest/configurations/.svn/text-base/: TEST.conf.svn-base  template.py.svn-base
ftranslation/Codigo/GridTest/configurations/cluster/: clusterTest2_htab.py  clusterTest3.py  dumbClusterTest.py
ftranslation/Codigo/GridTest/configurations/cluster/.svn/: all-wcprops  entries
ftranslation/Codigo/GridTest/configurations/cluster/.svn/text-base/: clusterTest1.py.svn-base  clusterTest2.py.svn-base  clusterTest2_hylores.py.svn-base  clusterTest33.py.svn-base  clusterTest4.py.svn-base
ftranslation/Codigo/GridTest/configurations/compare/: compareAll.py  compareHtabRacer.py  compareHybrid2.py  compareHybrid3.py  dlprovers.py  serial-vs-parallel.py
ftranslation/Codigo/GridTest/configurations/compare/.svn/: all-wcprops  entries
ftranslation/Codigo/GridTest/configurations/compare/.svn/text-base/: compareHybrid.py.svn-base  compareHybridTopo.py.svn-base  htabSpartacusHerod.py.svn-base
ftranslation/Codigo/GridTest/configurations/tests/.svn/: all-wcprops  entries
ftranslation/Codigo/GridTest/configurations/tests/.svn/text-base/: testHLR-LT-ST.py.svn-base  testHLR-LT-ST2.py.svn-base  testLTs.py.svn-base  testSTs.py.svn-base
ftranslation/Codigo/GridTest/drivers/: eprover.py  fact.py  haksat.py  htab.py  hyloresv2.py  hyloresv2_5.py  pellet.py  prover.py  spartacus.py  translation.py  translator.py  vampire.py
ftranslation/Codigo/GridTest/drivers/.svn/: all-wcprops  entries
ftranslation/Codigo/GridTest/drivers/.svn/text-base/: bliksem.py.svn-base  herod.py.svn-base  hyloban.py.svn-base  hylotab.py.svn-base  racer.py.svn-base  spass.py.svn-base
ftranslation/Codigo/GridTest/lwb_k/: create_batch.sh
ftranslation/Codigo/GridTest/lwb_k/.svn/: all-wcprops  entries
ftranslation/Codigo/GridTest/lwb_k/formulas/: k_branch_n.txt.10.intohylo  k_branch_n.txt.11.intohylo  k_branch_n.txt.13.intohylo  k_branch_p.txt.1.intohylo  k_branch_p.txt.12.intohylo  k_branch_p.txt.13.intohylo  k_branch_p.txt.16.intohylo  k_branch_p.txt.18.intohylo  k_branch_p.txt.2.intohylo  k_branch_p.txt.3.intohylo  k_branch_p.txt.6.intohylo  k_branch_p.txt.8.intohylo  k_d4_p.txt.11.intohylo  k_d4_p.txt.12.intohylo  k_d4_p.txt.13.intohylo  k_d4_p.txt.15.intohylo  k_d4_p.txt.16.intohylo  k_d4_p.txt.17.intohylo  k_d4_p.txt.20.intohylo  k_d4_p.txt.3.intohylo  k_d4_p.txt.5.intohylo  k_d4_p.txt.7.intohylo  k_dum_n.txt.10.intohylo  k_dum_n.txt.11.intohylo  k_dum_n.txt.12.intohylo  k_dum_n.txt.13.intohylo  k_dum_n.txt.17.intohylo  k_dum_n.txt.18.intohylo  k_dum_n.txt.19.intohylo  k_dum_n.txt.20.intohylo  k_dum_n.txt.5.intohylo  k_dum_n.txt.6.intohylo  k_dum_n.txt.9.intohylo  k_dum_p.txt.10.intohylo  k_dum_p.txt.12.intohylo  k_dum_p.txt.13.intohylo  k_dum_p.txt.14.intohylo  k_dum_p.txt.15.intohylo  k_dum_p.txt.17.intohylo  k_dum_p.txt.18.intohylo  (+114 more)
ftranslation/Codigo/GridTest/lwb_k/formulas/.svn/: all-wcprops  entries
ftranslation/Codigo/GridTest/lwb_k/formulas/.svn/text-base/: k_branch_n.txt.12.intohylo.svn-base  k_branch_p.txt.10.intohylo.svn-base  k_branch_p.txt.11.intohylo.svn-base  k_branch_p.txt.14.intohylo.svn-base  k_branch_p.txt.15.intohylo.svn-base  k_branch_p.txt.17.intohylo.svn-base  k_branch_p.txt.19.intohylo.svn-base  k_branch_p.txt.20.intohylo.svn-base  k_branch_p.txt.21.intohylo.svn-base  k_branch_p.txt.4.intohylo.svn-base  k_branch_p.txt.5.intohylo.svn-base  k_branch_p.txt.7.intohylo.svn-base  k_branch_p.txt.9.intohylo.svn-base  k_d4_p.txt.1.intohylo.svn-base  k_d4_p.txt.10.intohylo.svn-base  k_d4_p.txt.14.intohylo.svn-base  k_d4_p.txt.18.intohylo.svn-base  k_d4_p.txt.19.intohylo.svn-base  k_d4_p.txt.2.intohylo.svn-base  k_d4_p.txt.21.intohylo.svn-base  k_d4_p.txt.4.intohylo.svn-base  k_d4_p.txt.6.intohylo.svn-base  k_d4_p.txt.8.intohylo.svn-base  (+140 more)
ftranslation/Codigo/GridTest/otherscripts/: find-inc_racer.sh  smallify.hs
ftranslation/Codigo/GridTest/otherscripts/.svn/: all-wcprops  entries
ftranslation/Codigo/GridTest/otherscripts/.svn/text-base/: find-inc.sh.svn-base  find-timeouts.sh.svn-base  genall.hs.svn-base
ftranslation/Codigo/ofthl/: ofthl.cabal
ftranslation/Codigo/ofthl/src/: FGenericTranslator.hs  FGenericTranslator2.hs  FOLSpassWriter.hs  FOLSpassWriter2.hs  ModalSpassWriter.hs  ModalTranslator.hs  ModalTranslator2.hs  OFGenericTranslator.hs  OFTranslation.hs  OFTranslation.hs.save.1  OFTranslation2.hs  SFOLSpassWriter.hs  SFOLSpassWriter2.hs  STptpWriter.hs  TptpWriter.hs  eagerSortsRemTrans-spass.hs  eagerSortsRemTrans-tptp.hs  fthl-spass.hs  funcTrans-tptp.hs  modal-spass.hs  modal-spass2.hs  moveNegIn-spass.hs  moveNegInTrans-spass.hs  ofthl-spass.hs  ofthl-tptp.hs  pnfFuncTrans-tptp.hs  pnffthl-spass.hs  removeImpTrans-spass.hs  ufthl-spass.hs  ufthl-tptp.hs  withSorts-spass.hs  withSorts-tptp.hs  withSortsAllIn-spass.hs  withSortsAllOut-spass.hs  withoutSorts-spass.hs  withoutSorts-tptp.hs
ftranslation/Codigo/prepo/: prepo.cabal
ftranslation/Codigo/prepo/examples/: expandImpAndDimp.prepo  extractAtsFromMods.prepo  removeRedundantSubformulas.prepo  removeTrueFalse.prepo  toNNF.prepo
ftranslation/Codigo/prepo/src/: prepo.hs
ftranslation/Codigo/prepo/src/Prepo/: AST.hs  ASTRewrite.hs  HyLoAST.hs  HyLoASTBuilder.hs  HyLoASTBuilder.y  HyLoLexer.hs  HyLoLexer.x  RewriteRulesLexer.hs  RewriteRulesLexer.x  RewriteRulesParser.hs  RewriteRulesParser.y
